--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,16 @@ dependencies {
     def koin_version = '2.0.1'
     def databinding_version = '3.1.4'
     def room_version = "2.2.5"
+    def navigation_version = "2.2.2"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-coroutines:2.1.0-alpha04"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.navigation:navigation-fragment:$navigation_version"
+    implementation "androidx.navigation:navigation-ui:$navigation_version"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
