--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,15 @@ dependencies {
     def databinding_version = '3.1.4'
     def room_version = "2.2.5"
     def navigation_version = "2.2.2"
+    def picasso_version = '2.71828'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     implementation "androidx.navigation:navigation-fragment:$navigation_version"
     implementation "androidx.navigation:navigation-ui:$navigation_version"
