--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     def room_version = "2.2.5"
     def navigation_version = "2.2.2"
     def picasso_version = '2.71828'
+    def constraint_layout_version = '2.0.0-beta7'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -49,6 +50,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "com.squareup.picasso:picasso:$picasso_version"
+
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
     implementation "androidx.navigation:navigation-fragment:$navigation_version"
     implementation "androidx.navigation:navigation-ui:$navigation_version"
